NM-325: GitHub code scanning - contrained path helpers